feat
- delete button "Удалить выбранное"